--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,13 @@
-<p>Dit is de startpagina</p>
-<p>Dit is de startpagina</p>
-<p>Dit is de startpagina</p>
-<p>Dit is de startpagina</p>
-<p>Dit is de startpagina</p>
-<p>Dit is de startpagina</p>
-<p>Dit is de startpagina</p>
+<h1>App component</h1>
+<ul>
+    <li>
+        <a routerLink="/" routerLinkActive="active">Home</a>
+    </li>
+    <li>
+        <a routerLink="/locations" routerLinkActive="active">Locations</a>
+    </li>
+    <li>
+        <a routerLink="/location/create" routerLinkActive="active">Create Location</a>
+    </li>
+</ul>
+
