--- a/src/app/reservation/reservation-list/reservation-list.component.html
+++ b/src/app/reservation/reservation-list/reservation-list.component.html
@@ -3,7 +3,7 @@
 <ul>
     <span *ngFor="let reservation of reservations">
         <li >
-            {{ reservation.reservationID + ' ' + reservation.roomID +  ', ' + reservation.customerID }}
+            {{ reservation.reservationID + ' ' + reservation.room.description +  ', ' + reservation.customer.fullname }}
         </li>
     </span>
 </ul>
