location crud  ok, room crud -delete = ok

--- a/src/app/location/location-list/location-list.component.html
+++ b/src/app/location/location-list/location-list.component.html
@@ -29,8 +29,9 @@
                 {{ location.adress }}
             </td>
             <td>
-                <a href="location/details/{{ location.locationID }}">Details</a>
-                Links Edit, Details, Delete
+                <a href="location/details/{{ location.locationID }}">Details</a> |
+                <a href="location/update/{{ location.locationID }}">Edit</a> |
+                <a href="location/delete/{{ location.locationID }}">Delete</a>
             </td>
         </tr>
     </tbody>
