--- a/src/app/location/location-update/location-update.component.html
+++ b/src/app/location/location-update/location-update.component.html
@@ -1,5 +1,20 @@
-<h2>Update</h2>
-
-<span *ngFor="let location">
-    <p>{{ location.locationID + ' ' + location.name +  ', ' + location.adress }}</p>
-</span>
+<h2>Update locatie</h2>
+<form (ngSubmit)="onSubmit()" #locationForm="ngForm">
+  <p>
+      <label for="name">Naam</label><br />
+      <input id="name" name="name" required [(ngModel)]="location.name"  />
+  </p>
+  <p>
+      <label for="place">Plaats</label><br />
+      <input id="place" name="place" required [(ngModel)]="location.place" />
+  </p>
+  <p>
+    <label for="adress">Adres</label><br />
+    <input id="adress" name="adress" required [(ngModel)]="location.adress" />
+</p>
+  <p>
+      <button type="submit" [disabled]="!locationForm.form.valid || submitted">
+        Submit
+      </button>
+  </p>
+</form>
