--- a/src/app/room/room-update/room-update.component.html
+++ b/src/app/room/room-update/room-update.component.html
@@ -1,4 +1,4 @@
-<h2>Nieuwe Kamer</h2>
+<h2>Update Kamer</h2>
 <form (ngSubmit)="onSubmit()" #roomForm="ngForm">
     <div>
         <label for="description">Naam</label><br />
