--- a/src/app/location/location-delete/location-delete.component.html
+++ b/src/app/location/location-delete/location-delete.component.html
@@ -1,1 +1,34 @@
-<p>location-delete works!</p>
+<h1>Delete</h1>
+
+<div>
+    <h2>Location</h2>
+    <hr />
+    <dl class="row">
+        <dt class = "col-sm-2">
+            Naam
+        </dt>
+        <dd class = "col-sm-10">
+            {{ location.name }}
+        </dd>
+        <dt class = "col-sm-2">
+            Plaats
+        </dt>
+        <dd class = "col-sm-10">
+            {{ location.place }}
+        </dd>
+        <dt class = "col-sm-2">
+            Adres
+        </dt>
+        <dd class = "col-sm-10">
+            {{ location.adress }}
+        </dd>
+    </dl>
+</div>
+<form (ngSubmit)="onSubmit()" #locationForm="ngForm">
+    <button type="submit">
+        Delete
+    </button>
+</form>
+<div>
+    <a href="locations">Back to List</a>
+</div>
