reservation cascading list, layout, rm test-code

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,13 +1,8 @@
-<h1>App component</h1>
-<ul>
-    <li>
-        <a routerLink="/" routerLinkActive="active">Home</a>
-    </li>
-    <li>
-        <a routerLink="/locations" routerLinkActive="active">Locations</a>
-    </li>
-    <li>
-        <a routerLink="/location/create" routerLinkActive="active">Create Location</a>
-    </li>
-</ul>
+<h1>Welkom</h1>
+
+<p>Welkom bij MedHouse, uw oplossing om klanten te ontvangen in een professionele omgeving</p>
+<p>Wij verhuren kamers voor verschillende medische en paramedische doeleinden. Indien u pas start, of al even bezig bent, klanten thuis ontvangen is niet zo professioneel. Wij verzorgen de locatie, u doet waar u het beste in bent. </p>
+<br />
+<p>Hopelijk mogen we u snel verwelkomen</p>
+
 
