--- a/src/app/reservation/reservation-create/reservation-create.component.html
+++ b/src/app/reservation/reservation-create/reservation-create.component.html
@@ -2,7 +2,7 @@
 <form (ngSubmit)="onSubmit()" #reservationForm="ngForm">
     <div>
         <label for="location">Locatie</label><br />
-        <select class="form-control" id="location" required [(ngModel)]="selectedLocation" name="location">
+        <select class="form-control" id="location" required [(ngModel)]="selectedLocation" (change)="FetchRooms()" name="location">
             <option *ngFor="let location of locations" [ngValue]="location.locationID">
                 {{ location.name }}
             </option>
@@ -10,31 +10,29 @@
     </div>
     <div>
         <label for="room">Locatie</label><br />
-        <select class="form-control" id="room" required [(ngModel)]="selectedRoom" name="room">
-            <option *ngFor="let room of rooms" [ngValue]="room.roomID">
+        <select class="form-control" id="room" required [(ngModel)]="selectedRoom" (change)="FetchPeriods()" name="room">
+            <option *ngFor="let room of rooms" [ngValue]="room">
                 {{ room.description }}
             </option>
         </select>
     </div>
+
     <div>
-        <div class="input-group">
-            <input class="form-control" placeholder="yyyy-mm-dd"
-                   name="dp" [(ngModel)]="model" ngbDatepicker #d="ngbDatepicker">
-            <div class="input-group-append">
-              <button class="btn btn-outline-secondary calendar" (click)="d.toggle()" type="button"></button>
-            </div>
+        <label for="date">Datum:</label>
+        <input type="date" id="date" required [(ngModel)]="reservation.date" (change)="FetchPeriods()" name="date">
     </div>
+
     <div>
-        <label for="period">Locatie</label><br />
+        <label for="period">Periode</label><br />
         <select class="form-control" id="period" required [(ngModel)]="selectedPeriod" name="period">
             <option *ngFor="let period of periods" [ngValue]="period.periodID">
-                {{ period.description }}
+                {{ period.hour }}
             </option>
         </select>
     </div>
     <div>
         <button type="submit">
             Submit
-          </button>
+        </button>
     </div>
 </form>
