--- a/src/app/site-framework/footer/footer.component.html
+++ b/src/app/site-framework/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer class="border-top footer text-muted">
     <div class="container">
-        <a routerLink="/" routerLinkActive="active">Home</a>
+        <p>2021 Medhouse - angular demo</p>
     </div>
 </footer>
