--- a/src/styles.css
+++ b/src/styles.css
@@ -1,35 +1,3 @@
-/* You can add global styles to this file, and also import other style files */
-body {background-color: #5CDB95;}
-navbar {background-color: #EDF5E1;}
 h1 {color: #05386B}
 h2 {color: #05386B}
-a {color: #05386B;}
-p {color: #501d94;}
-button {
-    background-color: #05386B;
-    color: #EDF5E1;
-    border-radius: 14px;
-}
-.accordion {
-    background-color: #8EE4AF;
-    color: #EDF5E1;
-    cursor: pointer;
-    padding: 18px;
-    width: 100%;
-    border: none;
-    text-align: left;
-    outline: none;
-    font-size: 15px;
-    transition: 0.4s;
-}
-
-    .active, .accordion:hover {
-        background-color: #379683;
-    }
-
-.panel {
-    padding: 0 18px;
-    display: none;
-    background-color: #379683;
-    overflow: hidden;
-}
+p {color: #05386B}
